# REVOCAP_Mesh

./: .gitattributes  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  INSTALL.md  INSTALL.txt  Makefile  MakefileConfig.ES2  MakefileConfig.Kei  MakefileConfig.LinuxCluster  MakefileConfig.LinuxDesktop  MakefileConfig.LinuxIntelCompiler  MakefileConfig.SR16000  MakefileConfig.in  MakefileRefiner.in  MakefileRuby.in  OPTIONS  README.txt  README_Refiner.txt  VERSION  install.rb  makeSource.rb
Common/: CMakeLists.txt  Makefile  kmbArrayUtil.h  kmbBLArray.cpp  kmbBLArray.h  kmbCalculator.cpp  kmbCalculator.h  kmbClassification.h  kmbCommon.h  kmbContainer.h  kmbContainerOnDisk.h  kmbDebug.h  kmbEnvInfo.cpp  kmbEnvInfo.h  kmbErrorCode.h  kmbIndex.h  kmbIntegration.h  kmbPermutation.cpp  kmbPermutation.h  kmbStringUtils.h  kmbTolerance.cpp  kmbTolerance.h
Geometry/: CMakeLists.txt  Makefile  kmbBoundingBox.cpp  kmbBoundingBox.h  kmbBoxRegion.cpp  kmbBoxRegion.h  kmbBoxRegion2D.cpp  kmbBoxRegion2D.h  kmbBucket.cpp  kmbBucket.h  kmbCircle.cpp  kmbCircle.h  kmbFramedPlane.cpp  kmbFramedPlane.h  kmbGeometry.h  kmbGeometry2D.cpp  kmbGeometry2D.h  kmbGeometry3D.h  kmbGeometry4D.h  kmbIdTypes.h  kmbLine.cpp  kmbLine.h  kmbMatrix2x2.cpp  kmbMatrix3x3.cpp  kmbMatrix4x4.cpp  kmbOctree.h  kmbOptimization.cpp  kmbOptimization.h  kmbPlane.cpp  kmbPlane.h  kmbPoint2DContainer.cpp  kmbPoint2DContainer.h  kmbPoint2DContainerMap.cpp  kmbPoint3D.cpp  kmbPoint3DContainer.cpp  kmbPoint3DContainer.h  kmbPoint3DContainerArray.cpp  kmbPoint3DContainerArray.h  kmbPoint3DContainerMArray.cpp  kmbPoint3DContainerMArray.h  (+19 more)
MeshDB/: CMakeLists.txt  Makefile  kmbBodyOperation.cpp  kmbBodyOperation.h  kmbBoundaryExtractor.cpp  kmbBoundaryExtractor.h  kmbCollision.cpp  kmbCollision.h  kmbCollision_detect.cpp  kmbCollision_static.cpp  kmbDataBindings.cpp  kmbDataBindings.h  kmbDataEvaluator.cpp  kmbDataEvaluator.h  kmbElement.cpp  kmbElement.h  kmbElementBucket.cpp  kmbElementBucket.h  kmbElementContainer.cpp  kmbElementContainer.h  kmbElementContainerArray.cpp  kmbElementContainerArray.h  kmbElementContainerMArray.cpp  kmbElementContainerMArray.h  kmbElementContainerMap.cpp  kmbElementContainerMap.h  kmbElementContainerMixedArray.cpp  kmbElementContainerMixedArray.h  kmbElementContainerMixedOnDisk.cpp  kmbElementContainerNArray.cpp  kmbElementContainerNArray.h  kmbElementContainerOpenGLDraw.cpp  kmbElementContainerOpenGLDraw.h  kmbElementContainerTriangleArray.cpp  kmbElementContainerTriangleArray.h  kmbElementEvaluator.cpp  kmbElementEvaluator.h  kmbElementEvaluator_Matrix.cpp  kmbElementEvaluator_Quad.cpp  kmbElementOctree.cpp  (+124 more)
MeshDBRuby/: Boundary.i  BoundingBox.i  CMakeLists.txt  Collision.i  Geometry.i  Matching.i  MeshDB.i  MeshData.i  MeshOperation.i  Plane.i  PolygonPartitioner.i  Revocap.i  SurfaceOperation.i  extconf.rb  kmbMeshDB_SWIG.h  kmbPhysicalValue_SWIG.h
MeshGL/: CMakeLists.txt  Makefile  kmbColor3fValueBindings.cpp  kmbColor3fValueBindings.h  kmbColorMap.cpp  kmbColorMap.h  kmbDIBRendering.cpp  kmbDIBRendering.h  kmbFBORendering.cpp  kmbFBORendering.h  kmbMaterialColor.cpp  kmbMaterialColor.h  kmbMatrixGL.cpp  kmbMeshGL.cpp  kmbMeshGL.h  kmbMeshGL_Contour.cpp  kmbMeshGL_Integral.cpp  kmbMeshGL_Isosurf.cpp  kmbMeshGL_Section.cpp
MeshGLRuby/: CMakeLists.txt  ColorMap.i  FBORendering.i  MeshGL.i  RevocapGL.i  extconf.rb
MeshGen/: CMakeLists.txt  Makefile  kmbBLMGenerator.cpp  kmbBLMGenerator.h  kmbEdgeStitcher.cpp  kmbEdgeStitcher.h  kmbListItem.h  kmbMeshRefiner.cpp  kmbMeshRefiner.h  kmbMeshSmoother.cpp  kmbMeshSmoother.h  kmbMiddleNodeManager.cpp  kmbMiddleNodeManager.h  kmbPatchModifier.cpp  kmbPatchModifier.h  kmbPatchOperation.cpp  kmbPatchOperation.h  kmbPolygonPartitioner.cpp  kmbPolygonPartitioner.h  kmbQuadOrientedSet.cpp  kmbQuadOrientedSet.h  kmbTetraItem.cpp  kmbTetraItem.h  kmbTriangleItem.cpp  kmbTriangleItem.h  kmbTriangleList.cpp  kmbTriangleList.h  kmbTriangleOrientedSet.cpp  kmbTriangleOrientedSet.h
MeshGenRuby/: BLMGenerator.i  CMakeLists.txt  EdgeStitcher.i  MakefileSwig  MeshRefiner.i  MeshSmoother.i  PatchModifier.i  PatchOperation.i  PolygonPartitioner.i  RevocapMeshGen.i  extconf.rb
Refiner/: CMakeLists.txt  INSTALL.md  Makefile  OPTIONS  README.txt  main.F90  main.c  main.cpp  mainFittingRefine1.c  mainFittingRefine2.c  mainFittingRefine3.c  mainFittingRefine3.cpp  mainHexa.c  mainHexa2.c  mainMulti.F90  mainMultiByType.c  mainMultiByType.cpp  mainMultiStage.c  mainMultiType.c  mainMultiType.cpp  mainNV.c  mainNV.cpp  mainPreFitting.cpp  mainShapeFuncFitting.c  mainSmoothingRefine.c  mainTetra.c  makeSource.rb  rcapRefiner.cpp  rcapRefiner.h  rcapRefiner.inc  rcapRefinerIO.cpp  rcapRefinerIO.h  rcapRefinerInterface.F90  rcapRefinerMacros.h  rcapRefinerStruct.h  test.rcap.f
RevocapIO/: CMakeLists.txt  Makefile  kmbCharacterCode.h  kmbDefineIO.h  kmbFFbIO.cpp  kmbFFbIO.h  kmbFortranIO.cpp  kmbFortranIO.h  kmbFrontISTRIO.cpp  kmbFrontISTRIO.h  kmbFrontISTRIO_Generics.h  kmbFrontISTRIO_MeshData.cpp  kmbFrontISTRIO_impl.hpp  kmbFrontISTRIO_inline.h  kmbFrontISTRMaterial.h  kmbFrontISTRMaterial_inline.h  kmbGmshIO.cpp  kmbGmshIO.h  kmbHecmwIO.cpp  kmbHecmwIO.h  kmbHecmwIO_3_6.cpp  kmbHecmwIO_4_4.cpp  kmbHecmwIO_V3.cpp  kmbMicroAVSIO.cpp  kmbMicroAVSIO.h  kmbNetgenIO.cpp  kmbNetgenIO.h  kmbOffIO.cpp  kmbOffIO.h  kmbOffIO_Generics.h  kmbOffIO_MeshData.cpp  kmbOffIO_impl.hpp  kmbRevocapCouplerIO.cpp  kmbRevocapCouplerIO.h  kmbRevocapIOUtils.cpp  kmbRevocapIOUtils.h  kmbRevocapMeshDumpIO.cpp  kmbRevocapMeshDumpIO.h  kmbRevocapNeutralIO.cpp  kmbRevocapNeutralIO.h  (+19 more)
RevocapIORuby/: CMakeLists.txt  MakefileSwig  RevocapIO.i  extconf.rb
Shape/: CMakeLists.txt  Makefile  kmbBSpline.cpp  kmbBSpline.h  kmbBSplineCurve2D.cpp  kmbBSplineCurve2D.h  kmbBSplineCurve3D.cpp  kmbBSplineCurve3D.h  kmbBSplineSurface3D.cpp  kmbBSplineSurface3D.h  kmbBernstein.cpp  kmbBernstein.h  kmbBezierCurve2D.cpp  kmbBezierCurve2D.h  kmbBezierCurve3D.cpp  kmbBezierCurve3D.h  kmbBezierSurface3D.cpp  kmbBezierSurface3D.h  kmbCADFileIO.cpp  kmbCADFileIO.h  kmbCurve2D.cpp  kmbCurve2D.h  kmbCurve3D.h  (+19 more)
(+335 files in other folders)
